--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/appweb-atel08/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Atelier 08n</title>
+    <title>Atelier 08</title>
   </head>
   <body>
+    <img src="/src/assets/images/NATURALSHOOTER.jpg" alt="mon image drôle" />
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
